--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=django-insecure-0e!(sx&o9#f=l3aavgqqno=ss=uwye=tw(9m_d=@*i)##&#oq@
-DB_NAME=dbtest
-DB_USER=nadiya
-DB_PASSWORD=nadiya@123
-DB_HOST=127.0.0.1
-DB_PORT=5432
+DB_NAME=...........
+DB_USER=.........
+DB_PASSWORD=........
+DB_HOST=.........
+DB_PORT=........
